--- a/content/404.html
+++ b/content/404.html
@@ -1,4 +1,10 @@
 {{template "header.html" .}}
-<h1>{{.Title}}</h1>
-<h2>Page Not Found!</h2>
+<div class="container">
+    <div class="row">
+        <div class="col text-center">
+            <h1>{{.Title}}</h1>
+            <h2>Page Not Found!</h2>
+        </div>
+    </div>
+</div>
 {{template "footer.html" .}}
