--- a/content/index.html
+++ b/content/index.html
@@ -189,7 +189,7 @@
                                         <div class="card-body">
                                             <p class="card-text">
                                             Cvetaeva</p>
-                                            <a href="#" class="btn btn-primary btn-block">
+                                            <a href="/popular-books.html" class="btn btn-primary btn-block">
                                             More books</a>
                                         </div>
                                     </div>
@@ -253,6 +253,23 @@
                     <a href="#"><img src="images/bgbook4.jpeg" class="img-fluid book"></a>
                     <a href="#"><img src="images/bgbook5.jpeg" class="img-fluid book"></a>
                     <a href="#"><img src="images/bgbook4.jpeg" class="img-fluid book"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact py-5 bg-contact">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-5 col-md-8 col-10">
+                    <div class="row items-wrapper py-3">
+                        <div class="row sm-5 col-8 floating-item first-item">
+                            <a href="/books/books.html" class="btn btn-outline-danger">More books</a>
+                        </div>
+                        <div class="row sm-5 col-8 floating-item">
+                            <a href="/p/popular-books.html" class="btn btn-outline-danger">Popular books</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
