--- a/content/popular-books.html
+++ b/content/popular-books.html
@@ -1,22 +1,93 @@
-{{template "header.html" .}}
-<section class="popular-books p-5">
-    <div class="align-self-start position-absolute">
-        <a href="#">
-            <img src="images/random_book1.jpeg" width="100" class="img-fluid m-2">
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
+	<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="images/background_book.jpeg">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style2.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/lightbox.css">
+    <title>Document</title>
+    </head>
+	<body>
+        <div class="align-self-start position-absolute">
+        <a href="/index.html">
+            <img src="/images/random_book1.jpeg" width="100" class="img-fluid m-2">
         </a>
-    </div>
-    <div class="container">
+        </div>
+<section class="popular-books p-5">
+    <<div class="container-fluid popular-books">
+            <!-- title -->
             <div class="row">
-                <div class="col text-center">
-                    <h1 class="text-light display-1 popular-books-head"> 
-                        We <img src="images/hands_heart.jpeg" width="300" class="img-fluid"> 
-                        reading </h1>
-                    <a href="#" class="btn btn-lg btn-outline-warning text-uppercase px-5">
-                        Check out
-                    </a>
+                <div class="col text-center py-5">
+                    <h2 class="text-secondary text-uppercase font-italic common-title">
+                        Popular books
+                    </h2>
                 </div>
             </div>
+            <!-- End of the title -->
             
+        <div class="row">
+            {{range .}}
+            <div class="row col-x1-3 col-lg-4 col-sm-8 rotate">
+                <div class="card text-center mb-3 book-card">
+                    <div class="card-header">
+                        <h4 class="font-weight-light">{{.Name}}</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="/images/random_book1.jpeg" class="img-fluid rounded">
+                    </div>
+                    <div class="card-footer">
+                        By {{.Author}} 
+                    </div>
+                    <div class="back">
+                        <div class="back-content">
+                            <h1 class="text-uppercase font-weight-light font-italic">
+                                Only for
+                            </h1>
+                            <h1 class="mb-3">{{.Price}}$</h1>
+                            <p><del>${{.Price}}</del></p>
+                            <a href="/buy.html" class="btn btn-outline-danger">Buy now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {{end}}
         </div>
 </section>
-{{template "footer.html" .}}
+	<section class="contact py-5 bg-contact">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-5 col-md-8 col-10">
+                    <div class="row items-wrapper py-3">
+                        <div class="row sm-5 col-8 floating-item first-item">
+                            <a href="/books.html" class="btn btn-outline-danger">More books</a>
+                        </div>
+                        <div class="row sm-5 col-8 floating-item">
+                            <a href="/p/popular-books.html" class="btn btn-outline-danger">Popular books</a>
+                        </div>
+                        <div class="row sm-5 col-8 floating-item">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/lightbox.js"></script>
+    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/lightbox.css">
+	</body>
+</html>
