--- a/content/create.html
+++ b/content/create.html
@@ -17,10 +17,11 @@
     <title>Document</title>
     </head>
 	<body>
-<form class="form-control-sm" method="POST" action="books/created.html">
+<form class="form-control form-control-lg" method="POST" action="books/created.html">
   <input type="text" name="Name" value="Book Name">   
   <input type="text" name="Author" value="Author">
   <input type="number" name="Price" value="Price">
+  <input type="text" class="input-lg large" name="Description" value="Description">
   <input type="submit" value="Create book" />
 </form>
 <script src="js/jquery-3.4.1.min.js"></script>
