--- a/content/index.html
+++ b/content/index.html
@@ -141,7 +141,7 @@
                                         <div class="card-body">
                                             <p class="card-text">
                                             William Shakespeare</p>
-                                            <a href="#" class="btn btn-primary btn-block">
+                                            <a href="/Shakespeare/book-author.html" class="btn btn-primary btn-block">
                                             More books</a>
                                         </div>
                                     </div>
@@ -165,7 +165,7 @@
                                         <div class="card-body">
                                             <p class="card-text">
                                             Tolstoj</p>
-                                            <a href="#" class="btn btn-primary btn-block">
+                                            <a href="/Lev Tolstoj/book-author.html" class="btn btn-primary btn-block">
                                             More books</a>
                                         </div>
                                     </div>
@@ -189,7 +189,7 @@
                                         <div class="card-body">
                                             <p class="card-text">
                                             Cvetaeva</p>
-                                            <a href="/popular-books.html" class="btn btn-primary btn-block">
+                                            <a href="/Cvetaeva/book-author.html" class="btn btn-primary btn-block">
                                             More books</a>
                                         </div>
                                     </div>
@@ -213,7 +213,7 @@
                                         <div class="card-body">
                                             <p class="card-text">
                                             Pushkin</p>
-                                            <a href="#" class="btn btn-primary btn-block">
+                                            <a href="/Pushkin/book-author.html" class="btn btn-primary btn-block">
                                             More books</a>
                                         </div>
                                     </div>
