--- a/content/popular-books.html
+++ b/content/popular-books.html
@@ -59,6 +59,10 @@
                     </div>
                 </div>
             </div>
+            {{else}}
+                <div class="row text-center book rows-books">
+                    <h2 class="text-center">Sorry! No books avaliable</h2>
+                </div>
             {{end}}
         </div>
 </section>
