Added concurrency and  authentication with cookie

--- a/content/created.html
+++ b/content/created.html
@@ -1,5 +1,5 @@
 {{template "header.html" .}}
 <div class="col-lg-4 text-center align-self-center">
-<h1> {{.Name}} {{.Author}} {{.Price}} Created!</h1>
+<h1> {{.}} Created!</h1>
 </div>
 {{template "footer.html" .}}
