--- a/content/popular-books.html
+++ b/content/popular-books.html
@@ -72,7 +72,7 @@
                 <div class="col-xl-5 col-md-8 col-10">
                     <div class="row items-wrapper py-3">
                         <div class="row sm-5 col-8 floating-item first-item">
-                            <a href="/books.html" class="btn btn-outline-danger">More books</a>
+                            <a href="/books/books.html" class="btn btn-outline-danger">More books</a>
                         </div>
                         <div class="row sm-5 col-8 floating-item">
                             <a href="/p/popular-books.html" class="btn btn-outline-danger">Popular books</a>
