Added search, fixed auth and changed some design

--- a/content/book-author.html
+++ b/content/book-author.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col text-center py-5">
                     <h2 class="text-secondary text-uppercase font-italic common-title">
-                        {{.Name}}
+                        {{.Author}}
                     </h2>
                 </div>
             </div>
