--- a/content/books.html
+++ b/content/books.html
@@ -22,7 +22,7 @@
                 <img src="/images/random_book1.jpeg" width="100" class="img-fluid m-2">
             </a>
         </div>
-    <div class="container-fluid famous-writers pb-5">
+    <div class="container-fluid famous-writers pb-5" id="wrapper">
             <!-- title -->
             <div class="row">
                 <div class="col text-center py-5">
