--- a/content/login.html
+++ b/content/login.html
@@ -17,10 +17,10 @@
     <title>Document</title>
     </head>
 	<body>
-<form class="form-control form-control-lg" method="POST" action="created.html">
+<form class="form-control form-control-lg" method="POST" action="/login/login.html">
   <input type="email" name="login" value="login">   
   <input type="password" name="password">
-  <input class="btn btn-outline-danger" type="submit" value="login" />
+  <input class="btn btn-outline-danger" type="submit" value="log in" />
 </form>
 <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/popper.js"></script>
