--- a/content/popular-books.html
+++ b/content/popular-books.html
@@ -22,8 +22,8 @@
             <img src="/images/random_book1.jpeg" width="100" class="img-fluid m-2">
         </a>
         </div>
-<section class="popular-books p-5">
-    <<div class="container-fluid popular-books">
+    <section class="popular-books p-5">
+    <div class="container-fluid popular-books">
             <!-- title -->
             <div class="row">
                 <div class="col text-center py-5">
