Added comments section(bad html)

--- a/content/book-name.html
+++ b/content/book-name.html
@@ -35,6 +35,7 @@
                     <article class="intro">
                     <hr>
                         {{.Description}}
+                        <a href="/{{.Name}}/comments" class="btn btn-primary">Комментарии</a>
 				    <hr class="last">
 			        </article>
                 </div>
