--- a/content/popular-books.html
+++ b/content/popular-books.html
@@ -54,7 +54,7 @@
                             </h1>
                             <h1 class="mb-3">{{.Price}}$</h1>
                             <p><del>${{.Price}}</del></p>
-                            <a href="/buy.html" class="btn btn-outline-danger">Buy now</a>
+                            <a href="/{{.Name}}/book-name.html" class="btn btn-outline-danger">Buy now</a>
                         </div>
                     </div>
                 </div>
